Fixed up shop, phone, assm definitions

--- a/Assets/UI/Styles/Inventory.uss
+++ b/Assets/UI/Styles/Inventory.uss
@@ -16,10 +16,10 @@
     padding-top: 15px;
     padding-bottom: 15px;
     flex-grow: 1;
-    border-left-color: rgba(255, 255, 255, 255);
-    border-right-color: rgba(255, 255, 255, 255);
-    border-top-color: rgba(255, 255, 255, 255);
-    border-bottom-color: rgba(255, 255, 255, 255);
+    border-left-color: rgb(255, 255, 255);
+    border-right-color: rgb(255, 255, 255);
+    border-top-color: rgb(255, 255, 255);
+    border-bottom-color: rgb(255, 255, 255);
     border-left-width: 1px;
     border-right-width: 1px;
     border-top-width: 1px;
@@ -33,15 +33,15 @@
     margin-right: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
-    border-left-color: rgba(48, 48, 48, 255);
-    border-right-color: rgba(48, 48, 48, 255);
-    border-top-color: rgba(48, 48, 48, 255);
-    border-bottom-color: rgba(48, 48, 48, 255);
+    border-left-color: rgb(48, 48, 48);
+    border-right-color: rgb(48, 48, 48);
+    border-top-color: rgb(48, 48, 48);
+    border-bottom-color: rgb(48, 48, 48);
     border-left-width: 2px;
     border-right-width: 2px;
     border-top-width: 2px;
     border-bottom-width: 2px;
-    background-color: rgba(9, 19, 21, 255);
+    background-color: rgb(9, 19, 21);
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
     border-top-right-radius: 3px;
