--- a/Assets/UI/Styles/PhoneButtonStyles.uss
+++ b/Assets/UI/Styles/PhoneButtonStyles.uss
@@ -109,3 +109,131 @@
     -unity-text-outline-color: rgb(241, 16, 0);
     -unity-text-outline-width: 0;
 }
+
+.Container {
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+}
+
+.PhoneContainer {
+    width: 100%;
+    height: 100%;
+}
+
+.RealPhoneButtonContainer {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(88, 88, 88, 0);
+    display: flex;
+}
+
+.RealPhoneContainer {
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+.RealPhone {
+    width: 400px;
+    height: 800px;
+    align-items: center;
+    background-color: rgb(5, 5, 5);
+    border-left-width: 0;
+    border-right-width: 0;
+    border-top-width: 0;
+    border-bottom-width: 0;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    justify-content: space-between;
+    padding-top: 0;
+    cursor: initial;
+    visibility: visible;
+    overflow: visible;
+}
+
+.RealPhoneScreen {
+    width: 90%;
+    height: 70%;
+    margin-top: 0;
+    background-color: rgb(255, 255, 255);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding-top: 0;
+    align-items: center;
+    top: 7%;
+}
+
+.AppsLabel {
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    background-color: rgba(2, 2, 2, 0);
+    color: rgb(0, 0, 0);
+    font-size: 30px;
+    -unity-font-style: bold;
+    -unity-text-outline-width: 0;
+    -unity-text-outline-color: rgb(255, 255, 255);
+    text-shadow: 0 0 0 rgb(236, 12, 12);
+}
+
+.RealPhoneScrollView {
+    width: 95%;
+    height: 400px;
+    top: 0;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
+.TwoAppContainer {
+    width: 90%;
+    height: 100px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.AppButtons {
+    width: 50%;
+    height: 100%;
+    color: rgba(0, 0, 0, 255);
+    font-size: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-left-color: rgba(0, 0, 0, 255);
+    border-right-color: rgba(0, 0, 0, 255);
+    border-top-color: rgba(0, 0, 0, 255);
+    border-bottom-color: rgba(0, 0, 0, 255);
+    background-color: rgba(202, 202, 202, 255);
+}
+
+.AppButtons:active {
+    width: 50%;
+    height: 100%;
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-left-color: rgb(0, 0, 0);
+    border-right-color: rgb(0, 0, 0);
+    border-top-color: rgb(0, 0, 0);
+    border-bottom-color: rgb(0, 0, 0);
+    background-color: rgb(202, 202, 202);
+    opacity: 0.6;
+}
