--- a/Assets/UI/Styles/NewShop.uss
+++ b/Assets/UI/Styles/NewShop.uss
@@ -19,7 +19,7 @@
     -unity-font-style: bold;
 }
 
-.ButtonCurrent {
+.ButtonUnActive {
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     border-left-color: rgb(228, 255, 0);
@@ -549,4 +549,36 @@
     border-bottom-color: rgb(255, 255, 255);
     opacity: 0.6;
     display: flex;
+}
+
+.Button:active {
+    height: 48%;
+    width: 100%;
+    font-size: 30px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-left-color: rgb(255, 0, 0);
+    border-right-color: rgb(255, 0, 0);
+    border-top-color: rgb(255, 0, 0);
+    border-bottom-color: rgb(255, 0, 0);
+    border-left-width: 5px;
+    border-right-width: 5px;
+    border-top-width: 5px;
+    border-bottom-width: 5px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    -unity-font-style: bold;
+    opacity: 0.6;
+}
+
+.ButtonUnActive:active {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    border-left-color: rgb(228, 255, 0);
+    border-right-color: rgb(228, 255, 0);
+    border-top-color: rgb(228, 255, 0);
+    border-bottom-color: rgb(228, 255, 0);
+    opacity: 0.6;
 }
