--- a/Assets/UI/Styles/PhoneButtonStyles.uss
+++ b/Assets/UI/Styles/PhoneButtonStyles.uss
@@ -1,7 +1,7 @@
 .PhoneButton {
     width: 15%;
     height: 15%;
-    background-image: url('/Assets/Base/Textures/Phone.png');
+    background-image: url('/Assets/UI/Textures/Phone.png');
     opacity: 1;
     background-color: rgba(255, 255, 255, 0);
     -unity-background-image-tint-color: rgb(255, 255, 255);
@@ -208,17 +208,17 @@
 .AppButtons {
     width: 50%;
     height: 100%;
-    color: rgba(0, 0, 0, 255);
+    color: rgb(0, 0, 0);
     font-size: 20px;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    border-left-color: rgba(0, 0, 0, 255);
-    border-right-color: rgba(0, 0, 0, 255);
-    border-top-color: rgba(0, 0, 0, 255);
-    border-bottom-color: rgba(0, 0, 0, 255);
-    background-color: rgba(202, 202, 202, 255);
+    border-left-color: rgb(0, 0, 0);
+    border-right-color: rgb(0, 0, 0);
+    border-top-color: rgb(0, 0, 0);
+    border-bottom-color: rgb(0, 0, 0);
+    background-color: rgb(202, 202, 202);
 }
 
 .AppButtons:active {
