--- a/Assets/UI/UIScreens/PhoneButton.uxml
+++ b/Assets/UI/UIScreens/PhoneButton.uxml
@@ -19,6 +19,6 @@
                 </ui:VisualElement>
             </ui:VisualElement>
         </ui:Button>
-        <ui:Button display-tooltip-when-elided="true" name="phoneButton" class="PhoneButton" style="width: 10%; top: 84%; left: 89%; background-image: url(&apos;/Assets/UI/Textures/Phone.png&apos;); display: flex;" />
+        <ui:Button display-tooltip-when-elided="true" name="phoneButton" class="PhoneButton" style="width: 10%; top: 0; left: 89%; background-image: url(&apos;/Assets/UI/Textures/Phone.png&apos;); display: flex; right: 0;" />
     </ui:VisualElement>
 </ui:UXML>
