--- a/Assets/UI/UIScreens/Inventory.uxml
+++ b/Assets/UI/UIScreens/Inventory.uxml
@@ -19,7 +19,7 @@
                         </ui:ScrollView>
                     </ui:VisualElement>
                     <ui:VisualElement style="width: 25%; height: 100%; align-items: flex-end; justify-content: center; border-left-color: rgb(255, 197, 0); border-right-color: rgb(255, 197, 0); border-top-color: rgb(255, 197, 0); border-bottom-color: rgb(255, 197, 0); border-left-width: 1px; border-right-width: 0; border-top-width: 0; border-bottom-width: 0;">
-                        <ui:VisualElement name="ItemInfo" class="ItemInfoContainer" style="height: 65%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; align-items: stretch; justify-content: center; flex-direction: column; width: 90%;">
+                        <ui:VisualElement name="ItemInfo" class="ItemInfoContainer" style="height: 65%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; align-items: stretch; justify-content: center; flex-direction: column; width: 90%; display: none;">
                             <ui:VisualElement style="width: 100%; height: 10%; align-items: center; justify-content: center;">
                                 <ui:Label text="Item Name" display-tooltip-when-elided="true" name="ItemName" class="ItemNameLabel" style="width: 100%; height: 100%; font-size: 32px; -unity-text-align: middle-center; -unity-font-style: bold;" />
                             </ui:VisualElement>
