--- a/Assets/UI/UIScreens/PhoneButton.uxml
+++ b/Assets/UI/UIScreens/PhoneButton.uxml
@@ -30,5 +30,23 @@
             </ui:VisualElement>
         </ui:Button>
         <ui:Button display-tooltip-when-elided="true" name="phoneButton" class="PhoneButton" style="width: 10%; top: 0; left: 89%; background-image: url(&apos;/Assets/UI/Textures/Phone.png&apos;); display: flex; right: 0;" />
+        <ui:Button display-tooltip-when-elided="true" name="TimeWeather" class="TimeWeatherContainer" style="border-left-width: 4px; border-right-width: 4px; border-top-width: 4px; border-bottom-width: 4px; height: 25%;">
+            <ui:VisualElement style="width: 30%; height: 100%; border-right-width: 1px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); align-items: center; justify-content: center;">
+                <ui:Label display-tooltip-when-elided="true" name="WeatherIcon" style="height: 70%; background-image: url(&apos;/Assets/UI/Textures/Sun.png&apos;); -unity-background-scale-mode: stretch-to-fill;" />
+                <ui:Label text="Sunny" display-tooltip-when-elided="true" style="height: 30%; font-size: 18px; color: rgb(2, 0, 0); -unity-font-style: bold-and-italic; -unity-text-align: upper-center;" />
+            </ui:VisualElement>
+            <ui:VisualElement style="width: 70%; height: 100%;">
+                <ui:Label text="2022-04-11" display-tooltip-when-elided="true" name="Date" style="height: 30%; font-size: 24px; -unity-font-style: normal; background-color: rgba(0, 0, 0, 0); color: rgb(0, 0, 0); -unity-text-align: middle-center; white-space: nowrap; border-bottom-width: 2px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);" />
+                <ui:VisualElement style="width: 100%; height: 30%; flex-direction: row; align-items: center; justify-content: center;">
+                    <ui:Label text="12:12:01" display-tooltip-when-elided="true" name="Time" style="height: 100%; -unity-font-style: bold; font-size: 28px; color: rgb(0, 0, 0); width: 80%; -unity-text-align: middle-center; letter-spacing: 0; padding-right: 0; padding-left: 25%;" />
+                    <ui:Label text="1.5x" display-tooltip-when-elided="true" style="width: 20%; height: 100%; border-left-width: 0; border-right-width: 0; border-top-width: 0; border-bottom-width: 0; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); font-size: 20px; white-space: normal; color: rgb(0, 0, 0); -unity-text-align: middle-right; -unity-font-style: normal;" />
+                </ui:VisualElement>
+                <ui:VisualElement style="height: 40%; flex-direction: row; padding-top: 4px; justify-content: flex-start; align-items: stretch;">
+                    <ui:Button display-tooltip-when-elided="true" name="BackTrack" class="TimeControlButtons" style="background-image: url(&apos;/Assets/UI/Textures/BackTrack.png&apos;); -unity-background-scale-mode: scale-to-fit; background-color: rgba(88, 88, 88, 0); border-left-color: rgba(255, 255, 255, 0); border-right-color: rgba(255, 255, 255, 0); border-top-color: rgba(255, 255, 255, 0); border-bottom-color: rgba(255, 255, 255, 0); width: 30%; height: 100%;" />
+                    <ui:Button display-tooltip-when-elided="true" name="StartPause" class="TimeControlButtons" style="background-image: url(&apos;/Assets/UI/Textures/PausePlay.png&apos;); -unity-background-scale-mode: scale-to-fit; background-color: rgba(88, 88, 88, 0); border-left-color: rgba(255, 255, 255, 0); border-right-color: rgba(255, 255, 255, 0); border-top-color: rgba(255, 255, 255, 0); border-bottom-color: rgba(255, 255, 255, 0); width: 40%; height: 100%;" />
+                    <ui:Button display-tooltip-when-elided="true" name="FastForward" class="TimeControlButtons" style="background-image: url(&apos;/Assets/UI/Textures/FastForward.png&apos;); -unity-background-scale-mode: scale-to-fit; background-color: rgba(88, 88, 88, 0); border-left-color: rgba(255, 255, 255, 0); border-right-color: rgba(255, 255, 255, 0); border-top-color: rgba(255, 255, 255, 0); border-bottom-color: rgba(255, 255, 255, 0); width: 30%; height: 100%;" />
+                </ui:VisualElement>
+            </ui:VisualElement>
+        </ui:Button>
     </ui:VisualElement>
 </ui:UXML>
