Fixed Shop issue, Inventory needs more work

--- a/Assets/UI/Styles/Inventory.uss
+++ b/Assets/UI/Styles/Inventory.uss
@@ -165,3 +165,30 @@
     color: rgb(255, 255, 255);
     -unity-text-align: upper-center;
 }
+
+.EquipButton {
+    flex-grow: 1;
+    height: 52px;
+    font-size: 24px;
+    background-color: rgb(255, 197, 0);
+    border-left-color: rgb(255, 197, 0);
+    border-right-color: rgb(255, 197, 0);
+    border-top-color: rgb(255, 197, 0);
+    border-bottom-color: rgb(255, 197, 0);
+    color: rgb(0, 0, 0);
+    -unity-font-style: bold;
+}
+
+.EquipButton:active {
+    flex-grow: 1;
+    height: 52px;
+    font-size: 24px;
+    background-color: rgb(255, 197, 0);
+    border-left-color: rgb(255, 197, 0);
+    border-right-color: rgb(255, 197, 0);
+    border-top-color: rgb(255, 197, 0);
+    border-bottom-color: rgb(255, 197, 0);
+    color: rgb(0, 0, 0);
+    -unity-font-style: bold;
+    opacity: 0.6;
+}
